<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Nitrogen OS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- cards -->
    <string name="card1">Status Bar</string>
    <string name="card2">Lock Screen</string>
    <string name="card3">Buttons</string>
    <string name="card4">Interface</string>
    <string name="card5">Recents</string>
    <string name="card6">Misc</string>
    <string name="statusbar_title">Statusbar</string>

    <!-- Omani Themes -->
    <string name="theme_select_title">System themes</string>
    <string name="omni_theme_select_none">Disabled</string>
    <string name="theme_select_summary">Theme your system</string>

    <!-- Battery percentage -->
    <string name="battery_style_category_title">Battery icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>

    <!-- Status bar battery style-->
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>

    <!-- Lockscreen battery info indicator  -->
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display charger max current and voltage and battery temperature on lockscreen</string>


    <!-- Roaming indicator icon -->
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Roaming indicator in signal icon when in roaming mode</string>

    <!-- Show VoLTE icon on statusbar -->
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon (Needs a SystemUI restart to take effect)</string>

    <!-- Volume rocker music control -->
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>

    <!-- Statusbar Clock -->
    <string name="clock_style_category_title">Clock Settings</string>
    <string name="clock_style_category_summary">Statusbar Clock Tuner</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>

    <!-- Network traffic -->
    <string name="traffic_title">Traffic indicators</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="show_network_traffic_down">Downlink</string>
    <string name="show_network_traffic_all">Uplink and Downlink</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>

    <!-- Weather -->
    <string name="weather_title">Weather</string>
    <string name="weather_unit">Temperature unit</string>
    <string name="weather_unit_metric" translatable="false">Celsius</string>
    <string name="weather_unit_imperial" translatable="false">Fahrenheit</string>

    <!-- Audio Panel view  -->
    <string name="audio_panel_view">Audio panel</string>
    <string name="audio_panel_view_media_title">Media</string>
    <string name="audio_panel_view_ringer_title">Ring</string>
    <string name="audio_panel_view_notification_title">Notification</string>
    <string name="audio_panel_view_alarm_title">Alarm</string>
    <string name="audio_panel_view_voice_title">Voice</string>
    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
    <string name="sound_settings_title">Sound settings</string>

    <!-- Statusbar ticker -->
    <string name="statusbar_category_title">Notification</string>
    <string name="status_bar_ticker_title">Ticker</string>
    <string name="status_bar_show_ticker_title">Ticker</string>
    <string name="status_bar_show_ticker_summary">Notification preview in status bar</string>
    <string name="ticker_animation_mode_title">Ticker animation</string>
    <string name="ticker_animation_mode_alpha_fade">Fade</string>
    <string name="ticker_animation_mode_scroll">Scroll</string>
    <string name="ticker_tick_duration_title">Ticker duration</string>

    <!-- QS tile styles -->
    <string name="quicksettings_title">QS styles </string>
    <string name="qs_tile_style_title">QS tile style</string>
    <string name="qstile_default">Default</string>
    <string name="qstile_circle_trim">Circle with trim</string>
    <string name="qstile_dual_tone_circle">Dual-toned circle</string>
    <string name="qstile_squircle_trim">Squircle with trim</string>

    <!-- Heads up -->
    <string name="heads_up_notifications">Heads Up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>

    <!-- Heads up timeout -->
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>

    <!-- Heads up snooze -->
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>

        <!-- Recents Membar --> 
    <string name="systemui_recents_mem_display_title">Show Memory Bar</string> 
    <string name="systemui_recents_mem_display_summary">Enable Disable Ram bar in recent app view</string> 

    <!-- Recents panel settings -->
    <string name="recents_title">Recents</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>

    <!-- AOSP Recents component Style -->
    <string name="recents_component_type_title">Stock Recents Style</string>
    <string name="recents_pie">Pie</string>
    <string name="recents_oreo">Oreo</string>
</resources>
