<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Pearl Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="battery_settings"
            android:title="@string/battery_style_category_title"
            android:icon="@drawable/ic_battery_title"
            android:fragment="com.pearl.shell.fragments.StatusBarBattery" />

    <Preference
         android:key="clock_settings"
         android:icon="@drawable/ic_clock"
         android:title="@string/clock_style_category_title"
         android:summary="@string/clock_style_category_summary"
         android:fragment="com.pearl.shell.fragments.ClockSettings" />

    <Preference
            android:title="@string/traffic_title"
            android:key="traffic"
            android:icon="@drawable/ic_network_traffic_icon"
            android:fragment="com.pearl.shell.fragments.Traffic" />

    <com.pearl.shell.preferences.SystemSettingSwitchPreference
        android:key="roaming_indicator_icon"
        android:title="@string/roaming_indicator_icon_title"
        android:summary="@string/roaming_indicator_icon_summary"
        android:defaultValue="true"/>

    <!-- VoLTE Icon -->
    <com.pearl.shell.preferences.SystemSettingSwitchPreference
        android:key="volte_icon"
        android:title="@string/volte_icon_title"
        android:summary="@string/volte_icon_summary"
        android:defaultValue="false"/>
</PreferenceScreen>
