<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/card1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card1" />

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image1"
                            android:text="@string/card1"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/card2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card2" />

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image2"
                            android:text="@string/card2"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardview1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/card3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card3" />

                        <TextView
                            android:id="@+id/text3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image3"
                            android:text="@string/card3"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/card4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card4" />

                        <TextView
                            android:id="@+id/text4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image4"
                            android:text="@string/card4"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardview2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/card5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card5" />

                        <TextView
                            android:id="@+id/text5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image5"
                            android:text="@string/card5"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/card6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/image6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/card6" />

                        <TextView
                            android:id="@+id/text6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/image6"
                            android:text="@string/card6"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="5"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_thin">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="monospace"
                android:text="About Us"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@mipmap/ic_launcher" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
